first banner header html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    */header section/*
+    <header>
+      <div class="container">
+        <img class="logo" src="./resources/images/ic-logo.svg"/>
+        <div>
+          <span> COLMAR ACADEMY </span>
+        </div>
+        <nav class="links">
+          <ul>
+            <li class="link 1">On Campus</li>
+            <li class="link 2">Online</li>
+            <li class="link 3">For Companies</li>
+            <li class="link 4">Sign in</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    */main content/*
+    <div class="container">
+      <div class="banner">
+        <img src="./resources/images/banner.jpg"/>
+        <div class="content">
+          <h2> Learn Somthing New Everyday </h2>
+          <h4> Lorem ipsum dolor sit amet, consecteur adipiscing elit.</h4>
+          <a href="#" class="btn"> Start Here </a>
+          </div>
+        </div>
+      </div>
+    </div>
     <h1></h1>
   </body>
 </html>
