--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
     */header section/*
     <header>
       <div class="container">
         <img class="logo" src="./resources/images/ic-logo.svg"/>
         <div>
-          <span> COLMAR ACADEMY </span>
+          <span class="colmar"> COLMAR</span><span class="academy"> ACADEMY </span>
         </div>
         <nav class="links">
-          <ul>
-            <li class="link 1">On Campus</li>
-            <li class="link 2">Online</li>
-            <li class="link 3">For Companies</li>
-            <li class="link 4">Sign in</li>
+          <ul class="desktop">
+            <li>On Campus</li>
+            <li>Online</li>
+            <li>For Companies</li>
+            <li>Sign in</li>
           </ul>
         </nav>
       </div>
     </header>
+
     */main content/*
     <div class="container">
       <div class="banner">
