--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+   <div class="main-content">
 
     */header section/*
     <header>
-      <div class="container">
-        <img class="logo" src="./resources/images/ic-logo.svg"/>
+      <div class="logo">
+        <img src="./resources/images/ic-logo.svg"/>
         <div>
           <span class="colmar"> COLMAR</span><span class="academy"> ACADEMY </span>
         </div>
@@ -25,17 +26,19 @@
     </header>
 
     */main content/*
-    <div class="container">
-      <div class="banner">
-        <img src="./resources/images/banner.jpg"/>
-        <div class="content">
+    <div class="banner">
+      <div class="container">
+        <div class="left-column">
+          <img class="banner-image" src="./resources/images/banner.jpg"/>
+        </div>
+        <div class="right-column">
           <h2> Learn Somthing New Everyday </h2>
           <h4> Lorem ipsum dolor sit amet, consecteur adipiscing elit.</h4>
-          <a href="#" class="btn"> Start Here </a>
+          <div class="button"> <span> Start Here </span>
           </div>
         </div>
       </div>
     </div>
-    <h1></h1>
+   </div>
   </body>
 </html>
