--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
    <div class="main-content">
 
-    */header section/*
+    <!-- header section -->
     <header>
       <div class="logo">
         <img src="./resources/images/ic-logo.svg"/>
@@ -25,7 +25,7 @@
       </div>
     </header>
 
-    */main content/*
+    <!-- main content-->
     <div class="banner">
       <div class="container">
         <div class="left-column">
@@ -37,6 +37,49 @@
           <div class="button"> <span> Start Here </span>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="information">
+      <div class="container">
+        <div class="left-column">
+          <img class="male-student" src="./resources/images/information-main.jpg"/>
+          <div class="info-main-content">
+            <h2>It doesn't hurt to keep practicing </h2>
+            <p> Curabitur vitae libero in ipsum porttitor consequat.
+                Aliquam et commodo lectus, nec consequat neque. Sed non
+                accumsan urna. Phasellus sed consequant ex. Etiam
+                eget magna laoreet, efficitur dolor consequat,
+                tristique ligula.</p>
+            <h6>Emanuel, Sr Strategist at Hiring.com </h6>
+          </div>
+        </div>
+        <div class="right-column">
+          <div class="item">
+            <div class="image-content">
+              <img src="./resources/images/information-orientation.jpg"/>
+              <div class="image-info">
+                <h3> Orientation Date </h3>
+                <p>Tue. 10/11 & Wed. 10/12: 8am-3pm</p>
+                <p class="read-more"> Read More </p>
+              </div>
+            </div>
+            <div class="image-content">
+              <img src="./resources/images/information-campus.jpg"/>
+              <div class="image-info">
+                <h3> Our Campus </h3>
+                <p> Find which campus is close to you </p>
+                <p class="read-more"> Read More </p>
+              </div>
+            </div>
+            <div class="image-content">
+              <img src="./resources/images/information-guest-lecture.jpg"/>
+              <div class="image-info">
+                <h3> Our Guest Lecture </h3>
+                <p> Join a keynote with Oliver Sack about music in medical treatment</p>
+                <p class="read-more"> Read More </p>
+              </div>
+            </div>
+          </div>
       </div>
     </div>
    </div>
