spelling error change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <img class="banner-image" src="./resources/images/banner.jpg"/>
         </div>
         <div class="right-column">
-          <h2> Learn Somthing New Everyday </h2>
+          <h2> Learn Something New Everyday </h2>
           <h4> Lorem ipsum dolor sit amet, consecteur adipiscing elit.</h4>
           <div class="button"> <span> Start Here </span>
           </div>
