add some course info

--- a/index.html
+++ b/index.html
@@ -82,6 +82,58 @@
           </div>
       </div>
     </div>
+    <div class="courses">
+      <div class="container">
+        <h2> Start Learning </h2>
+        <div class="software">
+          <img src="/resources/images/software.jpg">
+          <div class="class-info">
+            <h3 class="course"> Courses </h3>
+            <h5> </h5>
+            <p> </p>
+          </div>
+        </div>
+        <div class="#">
+          <img src="">
+          <div class="class-info">
+            <h3> </h3>
+            <h5> </h5>
+            <p> </p>
+          </div>
+        </div>
+        <div class="#">
+          <img src="">
+          <div class="class-info">
+            <h3> </h3>
+            <h5> </h5>
+            <p> </p>
+          </div>
+      </div>
+      <div class="#">
+        <img src="">
+        <div class="class-info">
+          <h3> </h3>
+          <h5> </h5>
+          <p> </p>
+        </div>
+      </div>
+      <div class="#">
+        <img src="">
+        <div class="class-info">
+          <h3> </h3>
+          <h5> </h5>
+          <p> </p>
+        </div>
+      </div>
+      <div class="#">
+        <img src="">
+        <div class="class-info">
+          <h3> </h3>
+          <h5> </h5>
+          <p> </p>
+        </div>
+      </div>
+    </div>
    </div>
   </body>
 </html>
