--- a/index.html
+++ b/index.html
@@ -88,49 +88,49 @@
         <div class="software">
           <img src="/resources/images/software.jpg">
           <div class="class-info">
-            <h3 class="course"> Courses </h3>
-            <h5> </h5>
-            <p> </p>
+            <h3> Software Engineer </h3>
+            <span> Courses </span>
+            <p> Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
-        <div class="#">
-          <img src="">
+        <div class="art">
+          <img src="./resources/images/course-computer-art.jpg">
           <div class="class-info">
-            <h3> </h3>
-            <h5> </h5>
-            <p> </p>
+            <h3> Computer Art </h3>
+            <span> Courses </span>
+            <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation </p>
           </div>
         </div>
-        <div class="#">
-          <img src="">
+        <div class="design">
+          <img src="./resources/images/course-design.jpg">
           <div class="class-info">
-            <h3> </h3>
-            <h5> </h5>
-            <p> </p>
+            <h3> Design </h3>
+            <span> Courses </span>
+            <p>User Experience Design, User Research, Visual Design </p>
           </div>
       </div>
-      <div class="#">
-        <img src="">
+      <div class="data">
+        <img src="./resources/images/course-data.jpg">
         <div class="class-info">
-          <h3> </h3>
-          <h5> </h5>
-          <p> </p>
+          <h3> Data </h3>
+          <span> Courses </span>
+          <p> Data Science, Big Data, SQL, Data Visualization</p>
         </div>
       </div>
-      <div class="#">
-        <img src="">
+      <div class="business">
+        <img src="./resources/images/course-business.jpg">
         <div class="class-info">
-          <h3> </h3>
-          <h5> </h5>
-          <p> </p>
+          <h3> Business </h3>
+          <span> Courses </span>
+          <p>Product Development, Business Development, Startup </p>
         </div>
       </div>
-      <div class="#">
-        <img src="">
+      <div class="marketing">
+        <img src="./resources/images/course-marketing.jpg">
         <div class="class-info">
-          <h3> </h3>
-          <h5> </h5>
-          <p> </p>
+          <h3> Marketing </h3>
+          <span> Courses </span>
+          <p> Analytics, Content Marketing, Mobile Marketing</p>
         </div>
       </div>
     </div>
