--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title> Colmar Academy </title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   </head>
   <body>
    <div class="main-content">
@@ -12,8 +13,9 @@
       <div class="logo">
         <img src="./resources/images/ic-logo.svg"/>
         <div>
-          <span class="colmar"> COLMAR</span><span class="academy"> ACADEMY </span>
+          <span class="colmar">COLMAR</span><span class="academy">ACADEMY</span>
         </div>
+      </div>
         <nav class="links">
           <ul class="desktop">
             <li>On Campus</li>
@@ -22,7 +24,6 @@
             <li>Sign in</li>
           </ul>
         </nav>
-      </div>
     </header>
 
     <!-- main content-->
@@ -32,7 +33,7 @@
           <img class="banner-image" src="./resources/images/banner.jpg"/>
         </div>
         <div class="right-column">
-          <h2> Learn Something New Everyday </h2>
+          <h1> Learn Something New Everyday </h1>
           <h4> Lorem ipsum dolor sit amet, consecteur adipiscing elit.</h4>
           <div class="button"> <span> Start Here </span>
           </div>
