--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
         </div>
       </div>
     </div>
-    <div class="information">
-      <div class="container">
-        <div class="left-column">
-          <img class="male-student" src="./resources/images/information-main.jpg"/>
+    <div class="information container">
+        <div class="info-left">
+          <div class="left-column">
+            <img class="male-student" src="./resources/images/information-main.jpg"/>
+          </div>
           <div class="info-main-content">
             <h2>It doesn't hurt to keep practicing </h2>
             <p> Curabitur vitae libero in ipsum porttitor consequat.
@@ -51,11 +52,10 @@
                 accumsan urna. Phasellus sed consequant ex. Etiam
                 eget magna laoreet, efficitur dolor consequat,
                 tristique ligula.</p>
-            <h6>Emanuel, Sr Strategist at Hiring.com </h6>
+              <h6>Emanuel, Sr Strategist at Hiring.com </h6>
           </div>
         </div>
         <div class="right-column">
-          <div class="item">
             <div class="image-content">
               <img src="./resources/images/information-orientation.jpg"/>
               <div class="image-info">
@@ -82,9 +82,7 @@
             </div>
           </div>
       </div>
-    </div>
-    <div class="courses">
-      <div class="container">
+    <div class="courses container">
         <h2> Start Learning </h2>
         <div class="software">
           <img src="/resources/images/software.jpg">
