--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> Colmar Academy </title>
+    <link rel="stylesheet" href="./resources/css/reset.css">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   </head>
@@ -40,7 +41,8 @@
         </div>
       </div>
     </div>
-    <div class="information container">
+    <div id="information">
+      <div class= "container">
         <div class="info-left">
           <div class="left-column">
             <img class="male-student" src="./resources/images/information-main.jpg"/>
@@ -57,7 +59,8 @@
         </div>
         <div class="right-column">
             <div class="image-content">
-              <img src="./resources/images/information-orientation.jpg"/>
+              <div class="image"> <img src="./resources/images/information-orientation.jpg"/>
+              </div>
               <div class="image-info">
                 <h3> Orientation Date </h3>
                 <p>Tue. 10/11 & Wed. 10/12: 8am-3pm</p>
@@ -65,7 +68,8 @@
               </div>
             </div>
             <div class="image-content">
-              <img src="./resources/images/information-campus.jpg"/>
+              <div class="image"><img src="./resources/images/information-campus.jpg"/>
+              </div>
               <div class="image-info">
                 <h3> Our Campus </h3>
                 <p> Find which campus is close to you </p>
@@ -73,7 +77,8 @@
               </div>
             </div>
             <div class="image-content">
-              <img src="./resources/images/information-guest-lecture.jpg"/>
+              <div class="image"> <img src="./resources/images/information-guest-lecture.jpg"/>
+              </div>
               <div class="image-info">
                 <h3> Our Guest Lecture </h3>
                 <p> Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -82,51 +87,59 @@
             </div>
           </div>
       </div>
-    <div class="courses container">
+    </div>
+    <div id="courses">
         <h2> Start Learning </h2>
-        <div class="software">
-          <img src="/resources/images/software.jpg">
-          <div class="class-info">
+      <div class="container">
+        <div class="image-content">
+          <div class="image"><img src="./resources/images/course-software.jpg">
+          </div>
+          <div class="image-info">
             <h3> Software Engineer </h3>
             <span> Courses </span>
             <p> Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
-        <div class="art">
-          <img src="./resources/images/course-computer-art.jpg">
-          <div class="class-info">
+        <div class="image-content">
+          <div class="image"><img src="./resources/images/course-computer-art.jpg">
+          </div>
+          <div class="image-info">
             <h3> Computer Art </h3>
             <span> Courses </span>
             <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation </p>
           </div>
         </div>
-        <div class="design">
-          <img src="./resources/images/course-design.jpg">
-          <div class="class-info">
+        <div class="image-content">
+          <div class="image"><img src="./resources/images/course-design.jpg">
+          </div>
+          <div class="image-info">
             <h3> Design </h3>
             <span> Courses </span>
             <p>User Experience Design, User Research, Visual Design </p>
           </div>
       </div>
-      <div class="data">
-        <img src="./resources/images/course-data.jpg">
-        <div class="class-info">
+      <div class="image-content">
+        <div class="image"><img src="./resources/images/course-data.jpg">
+        </div>
+        <div class="image-info">
           <h3> Data </h3>
           <span> Courses </span>
           <p> Data Science, Big Data, SQL, Data Visualization</p>
         </div>
       </div>
-      <div class="business">
-        <img src="./resources/images/course-business.jpg">
-        <div class="class-info">
+      <div class="image-content">
+        <div class="image"><img src="./resources/images/course-business.jpg">
+        </div>
+        <div class="image-info">
           <h3> Business </h3>
           <span> Courses </span>
           <p>Product Development, Business Development, Startup </p>
         </div>
       </div>
-      <div class="marketing">
-        <img src="./resources/images/course-marketing.jpg">
-        <div class="class-info">
+      <div class="image-content">
+        <div class="image"><img src="./resources/images/course-marketing.jpg">
+        </div>
+        <div class="image-info">
           <h3> Marketing </h3>
           <span> Courses </span>
           <p> Analytics, Content Marketing, Mobile Marketing</p>
@@ -134,5 +147,6 @@
       </div>
     </div>
    </div>
+  </div>
   </body>
 </html>
