--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
     <div id="courses">
         <h2> Start Learning </h2>
       <div class="container">
+      <div class="column">
         <div class="image-content">
           <div class="image"><img src="./resources/images/course-software.jpg">
           </div>
           <div class="image-info">
             <h3> Software Engineer </h3>
-            <span> Courses </span>
+            <span> COURSES </span>
             <p> Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
@@ -105,7 +106,7 @@
           </div>
           <div class="image-info">
             <h3> Computer Art </h3>
-            <span> Courses </span>
+            <span> COURSES </span>
             <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation </p>
           </div>
         </div>
@@ -114,7 +115,7 @@
           </div>
           <div class="image-info">
             <h3> Design </h3>
-            <span> Courses </span>
+            <span> COURSES </span>
             <p>User Experience Design, User Research, Visual Design </p>
           </div>
       </div>
@@ -123,7 +124,7 @@
         </div>
         <div class="image-info">
           <h3> Data </h3>
-          <span> Courses </span>
+          <span> COURSES </span>
           <p> Data Science, Big Data, SQL, Data Visualization</p>
         </div>
       </div>
@@ -132,7 +133,7 @@
         </div>
         <div class="image-info">
           <h3> Business </h3>
-          <span> Courses </span>
+          <span> COURSES </span>
           <p>Product Development, Business Development, Startup </p>
         </div>
       </div>
@@ -141,11 +142,27 @@
         </div>
         <div class="image-info">
           <h3> Marketing </h3>
-          <span> Courses </span>
+          <span> COURSES </span>
           <p> Analytics, Content Marketing, Mobile Marketing</p>
         </div>
       </div>
+     </div>
     </div>
+   </div>
+   <div id="thesis">
+     <h2> Thesis exhibit </h2>
+     <div class="container">
+       <div class="left-column">
+         <div class="video">
+           <video autoplay muted loop>
+             <source src="./resources/videos/thesis.mp4" type="video/mp4">
+           </video>
+        </div>
+        <div class="video-info">
+          <h3>Reimagine urban</h3>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequant ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        </div>
+     </div>
    </div>
   </div>
   </body>
