--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
    <div class="main-content">
@@ -154,7 +155,7 @@
      <div class="container">
        <div class="left-column">
          <div class="video">
-           <video autoplay muted loop>
+           <video autoplay muted loop controls>
              <source src="./resources/videos/thesis.mp4" type="video/mp4">
            </video>
         </div>
@@ -163,7 +164,34 @@
           <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequant ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         </div>
      </div>
+     <div class="right-column">
+       <div class="image-content">
+         <div class="image">
+           <img src="./resources/images/thesis-fisma.jpg">
+         </div>
+         <div class="image-info">
+           <h3>Fisma: Design and Prototype</h3>
+           <p>Designer shocase of new prototype product</p>
+         </div>
+       </div>
+       <div class="image-content">
+         <div class="image">
+           <img src="./resources/images/thesis-now-and-then.jpg">
+         </div>
+         <div class="image-info">
+           <h3>Now and then</h3>
+           <p>Research study about New York</p>
+         </div>
+       </div>
+     </div>
    </div>
   </div>
+  <footer>
+    <div class="copyright">
+       &copy Colmar Academy. All rights reserved.
+    </div>
+    <div class="legal">
+      <span>Terms</span> <span>Privacy</span>
+    </div>
   </body>
 </html>
