media for header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 
     <!-- header section -->
     <header>
+      <div class="container">
       <div class="logo">
-        <img src="./resources/images/ic-logo.svg"/>
+        <img class="desktop" src="./resources/images/ic-logo.svg"/>
+        <img class="mobile" src="./resources/images/ic-on-campus.svg"/>
+        <img class="mobile" src="./resources/images/ic-online.svg"/>
+        <img class="mobile" src="./resources/images/ic-login.svg"/>
         <div>
           <span class="colmar">COLMAR</span><span class="academy">ACADEMY</span>
         </div>
@@ -26,6 +30,7 @@
             <li>Sign in</li>
           </ul>
         </nav>
+      </div>
     </header>
 
     <!-- main content-->
