--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             <div class="image-content">
               <div class="image"> <img src="./resources/images/information-orientation.jpg"/>
               </div>
+              <div class="mobile-image"> <img src="./resources/images/information-orientation-mobile.jpg"/>
+              </div>
               <div class="image-info">
                 <h3> Orientation Date </h3>
                 <p>Tue. 10/11 & Wed. 10/12: 8am-3pm</p>
@@ -76,6 +78,8 @@
             <div class="image-content">
               <div class="image"><img src="./resources/images/information-campus.jpg"/>
               </div>
+              <div class="mobile-image"> <img src="./resources/images/information-campus-mobile.jpg"/>
+              </div>
               <div class="image-info">
                 <h3> Our Campus </h3>
                 <p> Find which campus is close to you </p>
@@ -84,6 +88,8 @@
             </div>
             <div class="image-content">
               <div class="image"> <img src="./resources/images/information-guest-lecture.jpg"/>
+              </div>
+              <div class="mobile-image"> <img src="./resources/images/information-guest-lecture-mobile.jpg"/>
               </div>
               <div class="image-info">
                 <h3> Our Guest Lecture </h3>
@@ -156,7 +162,7 @@
     </div>
    </div>
    <div id="thesis">
-     <h2> Thesis exhibit </h2>
+     <h2> Thesis exhibits </h2>
      <div class="container">
        <div class="left-column">
          <div class="video">
@@ -193,7 +199,7 @@
   </div>
   <footer>
     <div class="copyright">
-       &copy Colmar Academy. All rights reserved.
+       &copy 2016 Colmar Academy. All rights reserved.
     </div>
     <div class="legal">
       <span>Terms</span> <span>Privacy</span>
