--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <header>
       <div class="container">
       <div class="logo">
-        <img class="desktop" src="./resources/images/ic-logo.svg"/>
-        <img class="mobile" src="./resources/images/ic-on-campus.svg"/>
-        <img class="mobile" src="./resources/images/ic-online.svg"/>
-        <img class="mobile" src="./resources/images/ic-login.svg"/>
+        <img class="desktop" src="./resources/images/ic-logo.svg" alt="Colmar Academy logo"/>
+        <img class="mobile" src="./resources/images/ic-on-campus.svg" alt="A schematic image of a desk indicating in class on campus."/>
+        <img class="mobile" src="./resources/images/ic-online.svg" alt="A schematic image of a desktop indicatin online."/>
+        <img class="mobile" src="./resources/images/ic-login.svg" alt="A schematic image of the user indicating login."/>
         <div>
           <span class="colmar">COLMAR</span><span class="academy">ACADEMY</span>
         </div>
       </div>
         <nav class="links">
-          <ul class="desktop">
+          <ul class="desktop" role="presentation">
             <li>On Campus</li>
             <li>Online</li>
             <li>For Companies</li>
@@ -37,9 +37,9 @@
     <div class="banner">
       <div class="container">
         <div class="left-column">
-          <img class="banner-image" src="./resources/images/banner.jpg"/>
+          <img class="banner-image" src="./resources/images/banner.jpg" alt="Three students studying outside together at a picnic table."/>
         </div>
-        <div class="right-column">
+        <div class="right-column" role="presentation">
           <h1> Learn Something New Everyday </h1>
           <h4> Lorem ipsum dolor sit amet, consecteur adipiscing elit.</h4>
           <div class="button"> <span> Start Here </span>
@@ -51,9 +51,9 @@
       <div class= "container">
         <div class="info-left">
           <div class="left-column">
-            <img class="male-student" src="./resources/images/information-main.jpg"/>
+            <img class="male-student" src="./resources/images/information-main.jpg" alt="Smiling male student reading outside."/>
           </div>
-          <div class="info-main-content">
+          <div class="info-main-content" role="presentation">
             <h2>It doesn't hurt to keep practicing </h2>
             <p> Curabitur vitae libero in ipsum porttitor consequat.
                 Aliquam et commodo lectus, nec consequat neque. Sed non
@@ -65,33 +65,33 @@
         </div>
         <div class="right-column">
             <div class="image-content">
-              <div class="image"> <img src="./resources/images/information-orientation.jpg"/>
+              <div class="image"> <img src="./resources/images/information-orientation.jpg" alt="An arial view of students walking on a path on campus"/>
               </div>
-              <div class="mobile-image"> <img src="./resources/images/information-orientation-mobile.jpg"/>
+              <div class="mobile-image"> <img src="./resources/images/information-orientation-mobile.jpg" alt="Mobile image version. An arial view of students walking on a path on campus"/>
               </div>
-              <div class="image-info">
+              <div class="image-info" role="presentation">
                 <h3> Orientation Date </h3>
                 <p>Tue. 10/11 & Wed. 10/12: 8am-3pm</p>
                 <p class="read-more"> Read More </p>
               </div>
             </div>
             <div class="image-content">
-              <div class="image"><img src="./resources/images/information-campus.jpg"/>
+              <div class="image"><img src="./resources/images/information-campus.jpg" alt="Students sitting inside on campus."/>
               </div>
-              <div class="mobile-image"> <img src="./resources/images/information-campus-mobile.jpg"/>
+              <div class="mobile-image"> <img src="./resources/images/information-campus-mobile.jpg" alt="Mobile version. Students sitting inside on campus."/>
               </div>
-              <div class="image-info">
+              <div class="image-info" role="presentation">
                 <h3> Our Campus </h3>
                 <p> Find which campus is close to you </p>
                 <p class="read-more"> Read More </p>
               </div>
             </div>
             <div class="image-content">
-              <div class="image"> <img src="./resources/images/information-guest-lecture.jpg"/>
+              <div class="image"> <img src="./resources/images/information-guest-lecture.jpg" alt="Photo of the guest lecture."/>
               </div>
-              <div class="mobile-image"> <img src="./resources/images/information-guest-lecture-mobile.jpg"/>
+              <div class="mobile-image"> <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="Mobile version. Photo of the guest lecture."/>
               </div>
-              <div class="image-info">
+              <div class="image-info" role="presentation">
                 <h3> Our Guest Lecture </h3>
                 <p> Join a keynote with Oliver Sack about music in medical treatment</p>
                 <p class="read-more"> Read More </p>
@@ -105,54 +105,54 @@
       <div class="container">
       <div class="column">
         <div class="image-content">
-          <div class="image"><img src="./resources/images/course-software.jpg">
+          <div class="image"><img src="./resources/images/course-software.jpg" alt="A Mac computer with two screens on a desk at night with a reading light.">
           </div>
-          <div class="image-info">
+          <div class="image-info" role="presentation">
             <h3> Software Engineer </h3>
             <span> COURSES </span>
             <p> Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
         <div class="image-content">
-          <div class="image"><img src="./resources/images/course-computer-art.jpg">
+          <div class="image"><img src="./resources/images/course-computer-art.jpg" alt="A smartphone in a hand with a table and coffee cup in background.">
           </div>
-          <div class="image-info">
+          <div class="image-info" role="presentation">
             <h3> Computer Art </h3>
             <span> COURSES </span>
             <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation </p>
           </div>
         </div>
         <div class="image-content">
-          <div class="image"><img src="./resources/images/course-design.jpg">
+          <div class="image"><img src="./resources/images/course-design.jpg" alt="Someone holding an old camera.">
           </div>
-          <div class="image-info">
+          <div class="image-info" role="presentation">
             <h3> Design </h3>
             <span> COURSES </span>
             <p>User Experience Design, User Research, Visual Design </p>
           </div>
       </div>
       <div class="image-content">
-        <div class="image"><img src="./resources/images/course-data.jpg">
+        <div class="image"><img src="./resources/images/course-data.jpg" alt="A laptop on a desk with a graph on the screen.">
         </div>
-        <div class="image-info">
+        <div class="image-info" role="presentation">
           <h3> Data </h3>
           <span> COURSES </span>
           <p> Data Science, Big Data, SQL, Data Visualization</p>
         </div>
       </div>
       <div class="image-content">
-        <div class="image"><img src="./resources/images/course-business.jpg">
+        <div class="image"><img src="./resources/images/course-business.jpg" alt="A close up view of a chess set.">
         </div>
-        <div class="image-info">
+        <div class="image-info" role="presentation">
           <h3> Business </h3>
           <span> COURSES </span>
           <p>Product Development, Business Development, Startup </p>
         </div>
       </div>
       <div class="image-content">
-        <div class="image"><img src="./resources/images/course-marketing.jpg">
+        <div class="image"><img src="./resources/images/course-marketing.jpg" alt="A close up view of somone using their smartwatch.">
         </div>
-        <div class="image-info">
+        <div class="image-info" role="presentation">
           <h3> Marketing </h3>
           <span> COURSES </span>
           <p> Analytics, Content Marketing, Mobile Marketing</p>
@@ -167,10 +167,10 @@
        <div class="left-column">
          <div class="video">
            <video autoplay muted loop controls>
-             <source src="./resources/videos/thesis.mp4" type="video/mp4">
+             <source src="./resources/videos/thesis.mp4" type="video/mp4" alt="A time lapse view of a sketched lone multi-story square building with abstract window arrangement. The time lapse is one full day in a span of 30 seconds from dawn to night with clouds flying through in the day and all black except for the windows lit up in the night view.">
            </video>
         </div>
-        <div class="video-info">
+        <div class="video-info" role="presentation">
           <h3>Reimagine urban</h3>
           <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequant ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         </div>
@@ -178,18 +178,18 @@
      <div class="right-column">
        <div class="image-content">
          <div class="image">
-           <img src="./resources/images/thesis-fisma.jpg">
+           <img src="./resources/images/thesis-fisma.jpg" alt="Arial view of a desk with papers scattered, a smartpone, and an arm highlighting on one of the papers with pink highlighter.">
          </div>
-         <div class="image-info">
+         <div class="image-info" role="presentation">
            <h3>Fisma: Design and Prototype</h3>
            <p>Designer shocase of new prototype product</p>
          </div>
        </div>
        <div class="image-content">
          <div class="image">
-           <img src="./resources/images/thesis-now-and-then.jpg">
+           <img src="./resources/images/thesis-now-and-then.jpg" alt="A skyline view with the Empire State Building in the middle.">
          </div>
-         <div class="image-info">
+         <div class="image-info" role="presentation">
            <h3>Now and then</h3>
            <p>Research study about New York</p>
          </div>
